fixed icon display and removed some code

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     <section id="about" class="wrapper box_blur skills-display display_js">
         <div class="main-container main-container_padding">
             <header class="main-container__header">
-                <h2 class="title title_bottom-decor title_white">About Me</h2>
+                <h2 class="title title_bottom-decor">About Me</h2>
             </header>
             <div class="content skills">
                 <div class="skills__column layer" data-show-effect="fadeIn" data-show-delay="400">
@@ -356,7 +356,7 @@
                 <a href="#welcome" class="nav-panel__link init-scroll_js" data-scroll-nav="0" data-id-section="welcome"><i class="icon icon-home nav-panel__icon"></i>Home</a>
                 <a href="#portfolio" class="nav-panel__link init-scroll_js" data-scroll-nav="1" data-id-section="portfolio"><i class="icon icon-user nav-panel__icon "></i>Portfolio</a>
                 <a href="#about" class="nav-panel__link init-scroll_js" data-scroll-nav="2" data-id-section="about"><i class="icon icon-skills nav-panel__icon"></i>About Me</a>
-                <a href="#experience" class="nav-panel__link init-scroll_js" data-scroll-nav="3" data-id-section="experience"><i class="icon icon-th nav-panel__icon"></i>Experience</a>
+                <a href="#experience" class="nav-panel__link init-scroll_js" data-scroll-nav="3" data-id-section="experience"><i class="icon icon-diamond nav-panel__icon"></i>Experience</a>
         </div>
     </div>
     <div class="overlay mobile-menu-close_js"></div>
