--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                     <div class="skills-bar__item">
                         <div class="skill-bar layer skill-bar_js" data-show-effect="fadeInLeft" data-show-delay="1800" data-skill-bar-width="">
                             <div class="skill layer" data-show-effect="fadeIn" data-show-delay="1800">
-                                <span class="skill__name">Data Structure & Algorithmn</span>
+                                <span class="skill__name">Data Structure & Algorithm</span>
                                 <span class="skill__value skill__value_js"></span>
                             </div>
                         </div>
