--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <span class="welcome__label layer" data-show-effect="fadeInUp" data-show-delay="500">Front End Developer Bay Area, CA</span>
             </h1>
                 <div class="welcome__footer">
-                    <a href="resume.docx" class="welcome__link layer" data-show-effect="fadeInUp" data-show-delay="1000">download resume</a>
+                    <a href="resume.pdf" class="welcome__link layer" target="_blank" data-show-effect="fadeInUp" data-show-delay="1000">download resume</a>
                 </div>
             </div>
         </div>
