updated some info

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="css/main.css" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,300,700" rel="stylesheet" type="text/css" />
-</head>  
+</head>
 
 <body id="welcome_active">
     <header id="welcome" class="header header_no-bg box_blur display_js">
@@ -251,7 +251,7 @@
                     <div class="skills-bar__item">
                         <div class="skill-bar layer skill-bar_js" data-show-effect="fadeInLeft" data-show-delay="2000" data-skill-bar-width="">
                             <div class="skill layer" data-show-effect="fadeIn" data-show-delay="2000">
-                                <span class="skill__name">Angular</span>
+                                <span class="skill__name">AngularJS</span>
                                 <span class="skill__value skill__value_js"></span>
                             </div>
                         </div>
@@ -299,12 +299,15 @@
                                 <br> -CSS to add next level designs to websites and applications
                                 <br> -Javascript to make parts of the site function
                                 <br> -jQuery to make applications, converting raw Javascript to jQuery vice versa
-                                <br>
+                                <br> 
                             </p>
                         </div>
                     </article>
                 </div>
-                <div class="timeline__layout">
+                <header class="main-container__header2">
+                    <h2 class="title title_bottom-decor">Education</h2>
+                </header>                
+                    <div class="timeline__layout">
                     <div class="timeline__dotted layer" data-show-effect="zoomIn" data-show-delay="1100" data-time="300"></div>
                     <div class="timeline__inner timeline__time layer" data-show-effect="fadeIn" data-show-delay="1500">
                         <span class="timeline__date">Sept.2016 - Jan.2017</span>
@@ -313,9 +316,9 @@
                     <article class="timeline__inner timeline__content layer" data-show-effect="fadeInRight" data-show-delay="1400">
                         <h3 class="title title_small timeline__title">Front-End developer</h3>
                         <div class="timeline__description">
-                            <p>-16 week Front-End Developer training program
-                                <br> -Each week we had to build a couple of projects based on what we learned
-                                <br> -Started witht the basics like CSS and HTML, then we advanced to Javascript, JQuery, Angular, Bootstrap, etc. </p>
+                            <p>
+                                An intense 16-week program run by developers that teach the fundamentals of UI & front-end web development. The course dives deep into teaching programming languages such as HTML5, CSS3, Javascript, jQuery, & AJAX. This also includes frameworks and libraries such as Twitter Bootstrap & JSON.
+                            </p>
                         </div>
                     </article>
                 </div>
@@ -414,7 +417,7 @@
                 <span class="close-arrow popup__close_js"></span>
                 <div class="popup__layout">
                     <header class="popup__header box_blur lrmw_layer" data-show-delay="500" data-hide-delay="900" data-time="500" data-show-effect="fadeIn" data-hide-effect="fadeOut">
-                        <h3 class="title popup__title"><span class="popup__title-label lrmw_layer"  data-show-delay="900" data-hide-delay="450" data-time="500" data-show-effect="rollIn" data-hide-effect="fadeOutRight">JQuery Gallery</span></h3>
+                        <h3 class="title popup__title"><span class="popup__title-label lrmw_layer"  data-show-delay="900" data-hide-delay="450" data-time="500" data-show-effect="rollIn" data-hide-effect="fadeOutRight">jQuery Gallery</span></h3>
                         <img src="img/jquerygallery2.jpg" class="responsive-img" alt="Title popup" />
                     </header>
                     <div class="popup__content">
