fixed some things

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                         <img src="img/jquerygallery.jpg" class="responsive-img1" alt="display of jquery gallery" />
                     </div>
                     <div class="list-works__overlay">
-                        <span class="list-works__name-project list-works__name-project_fade">Jquery Gallery</span>
+                        <span class="list-works__name-project list-works__name-project_fade">jQuery Gallery</span>
                         <span class="list-works__link-project">Go to Gallery</span>
                     </div>
                 </a>
