--- a/index.html
+++ b/index.html
@@ -340,8 +340,7 @@
                 <a href="#welcome" class="nav__link init-scroll_js" data-scroll-nav="0" data-id-section="welcome">Home</a>
                 <a href="#portfolio" class="nav__link init-scroll_js" data-scroll-nav="1" data-id-section="portfolio">Portfolio</a>
                 <a href="#about" class="nav__link init-scroll_js" data-scroll-nav="2" data-id-section="about">About me</a>
-                <!--            <a href="#skills" class="nav__link init-scroll_js" data-scroll-nav="3" data-id-section="skills">Skills</a>
- --><a href="#experience" class="nav__link init-scroll_js" data-scroll-nav="3" data-id-section="experience">Experience</a>
+                <a href="#experience" class="nav__link init-scroll_js" data-scroll-nav="3" data-id-section="experience">Experience</a>
             </nav>
             <div class="nav-icon mobile-menu-open_js">
                 <div class="icon-menu"></div>
