--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
                         <span class="list-works__link-project">View Website</span>
                     </div>
                 </a>
-                <a href="project/tictactoe/index.html" class="list-works__item layer open-popup_js" data-show-effect="fadeIn" data-show-delay="400" data-id="mrt">
+                <a href="project/brendaneich/index.html" class="list-works__item layer open-popup_js" data-show-effect="fadeIn" data-show-delay="400" data-id="mrt">
                     <div class="list-works__wrap-img">
-                        <img src="img/tictactoe.jpg" class="responsive-img1" alt="tictactoe" />
+                        <img src="img/brendaneich.jpg" class="responsive-img1" alt="brendaneich" />
                     </div>
                     <div class="list-works__overlay">
-                        <span class="list-works__name-project list-works__name-project_fade">Tictactoe</span>
-                        <span class="list-works__link-project">Play</span>
+                        <span class="list-works__name-project list-works__name-project_fade">Brendan Eich</span>
+                        <span class="list-works__link-project">View</span>
                     </div>
                 </a>
                 <a href="Projects/jquerymobileapp/index.html" class="list-works__item layer open-popup_js" data-show-effect="fadeIn" data-show-delay="500" data-id="pan">
@@ -512,19 +512,19 @@
                 <span class="close-arrow popup__close_js"></span>
                 <div class="popup__layout">
                     <header class="popup__header box_blur lrmw_layer" data-show-delay="500" data-hide-delay="900" data-time="500" data-show-effect="fadeIn" data-hide-effect="fadeOut">
-                        <h3 class="title popup__title"><span class="popup__title-label lrmw_layer"  data-show-delay="900" data-hide-delay="450" data-time="500" data-show-effect="lightSpeedIn" data-hide-effect="seesaw">Tictactoe</span></h3>
-                        <img src="img/tictactoe2.jpg" class="responsive-img" alt="Title popup" />
+                        <h3 class="title popup__title"><span class="popup__title-label lrmw_layer"  data-show-delay="900" data-hide-delay="450" data-time="500" data-show-effect="lightSpeedIn" data-hide-effect="seesaw">Brendan Eich</span></h3>
+                        <img src="img/brendaneich2.jpg" class="responsive-img" alt="Title popup" />
                     </header>
                     <div class="popup__content">
                         <div class="popup__description lrmw_layer" data-show-delay="200" data-hide-delay="600" data-time="500" data-show-effect="fadeInLeft" data-hide-effect="fadeOutLeft">
                             <br>
                             <br>
-                            <p>Javascript, Canvas, CSS, HTML</p>
+                            <p>Javascript, Bootstrap, CSS, HTML</p>
                         </div>
                         <div class="popup__sidebar lrmw_layer" data-show-delay="400" data-hide-delay="600" data-time="500" data-show-effect="fadeInRight" data-hide-effect="fadeOutRight">
                             <div class="popup__demo-box">
                                 <h4 class="title title_small">Demo:</h4>
-                                <a href="Projects/tictactoe/index.html" target="_blank" class="popup__show-more">Play</a>
+                                <a href="Projects/brendaneich/index.html" target="_blank" class="popup__show-more">View</a>
                             </div>
                         </div>
                     </div>
