made some changes

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body id="welcome_active">
     <header id="welcome" class="header header_no-bg box_blur display_js">
         <div class="main-container main-container_fullheight">
-            <div class="fullscreen-bg">
+            <div>
                 <video loop muted autoplay class="responsive-video">
                     <source src="video.mp4">
             </div>
