fixed display on bigger screens

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/main.css" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,300,700" rel="stylesheet" type="text/css" />
 </head>       
-     
+      
 <body id="welcome_active">
     <header id="welcome" class="header header_no-bg box_blur display_js">
         <div class="main-container main-container_fullheight">
@@ -369,7 +369,7 @@
                 <div class="popup__layout">
                     <header class="popup__header box_blur lrmw_layer" data-show-delay="500" data-hide-delay="900" data-time="500" data-show-effect="fadeIn" data-hide-effect="fadeOut">
                         <h3 class="title popup__title"><span class="popup__title-label lrmw_layer"  data-show-delay="600" data-hide-delay="450" data-time="500" data-show-effect="fadeInUp" data-hide-effect="fadeOutDown">utube</span></h3>
-                        <img src="img/uTube2.jpg" class="responsive-img" alt="utube" />
+                        <img src="img/utube2.jpg" class="responsive-img" alt="utube" />
                     </header>
                     <div class="popup__content">
                         <div class="popup__description lrmw_layer" data-show-delay="200" data-hide-delay="600" data-time="500" data-show-effect="fadeInLeft" data-hide-effect="fadeOutLeft">
