made some changes

--- a/index.html
+++ b/index.html
@@ -277,10 +277,10 @@
                     <article class="timeline__inner timeline__content layer" data-show-effect="fadeInRight" data-show-delay="1000">
                         <h3 class="title title_small timeline__title">Student Mentor</h3>
                         <div class="timeline__description">
-                            <p>-Assist new students and help them understand the fundamentals of Front-End developement.
+                            <p>-I help mentor new students on the curriculum Codify offers in Front-End Development.
                                 <br> -Course covers languages and frameworks such as, HTML5, CSS3, JavaScript, jQuery, Bootstrap, API's, JSON, AJAX, &nbsp;&nbsp;and AngularJS.
                                 <br> -Help students with critical thinking and intense problem solving
-                                <br> -Learn to ways to approach new tasks
+                                <br> -I specialize in 1 on 1 mentoring, helping students keep on track with the course. 
                                 <br>
                             </p>
                         </div>
