added new projects

--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
                         <span class="list-works__link-project">Search Video</span>
                     </div>
                 </a>
-                <a href="Projects/survey/index.html" class="list-works__item layer open-popup_js" data-show-effect="fadeIn" data-show-delay="200" data-id="aa">
+                <a href="Projects/calculator/index.html" class="list-works__item layer open-popup_js" data-show-effect="fadeIn" data-show-delay="200" data-id="aa">
                     <div class="list-works__wrap-img">
-                        <img src="img/survey.jpg" class="responsive-img1" alt="survey with three questions" />
+                        <img src="img/calculator.jpg" class="responsive-img1" alt="calculator" />
                     </div>
                     <div class="list-works__overlay">
-                        <span class="list-works__name-project list-works__name-project_fade">Survey</span>
-                        <span class="list-works__link-project">Take Survey</span>
+                        <span class="list-works__name-project list-works__name-project_fade">Calculator</span>
+                        <span class="list-works__link-project">Calculator</span>
                     </div>
                 </a>
                 <a href="Projects/37signals/index.html" class="list-works__item layer open-popup_js" data-show-effect="fadeIn" data-show-delay="300" data-id="lmb">
@@ -488,19 +488,19 @@
                 <span class="close-arrow popup__close_js"></span>
                 <div class="popup__layout">
                     <header class="popup__header box_blur lrmw_layer" data-show-delay="500" data-hide-delay="900" data-time="500" data-show-effect="fadeIn" data-hide-effect="fadeOut">
-                        <h3 class="title popup__title"><span class="popup__title-label lrmw_layer"  data-show-delay="900" data-hide-delay="450" data-time="500" data-show-effect="rotateInDownLeft" data-hide-effect="rotateOutUpLeft">survey</span></h3>
-                        <img src="img/survey2.jpg" class="responsive-img" alt="Title popup" />
+                        <h3 class="title popup__title"><span class="popup__title-label lrmw_layer"  data-show-delay="900" data-hide-delay="450" data-time="500" data-show-effect="rotateInDownLeft" data-hide-effect="rotateOutUpLeft">calculator</span></h3>
+                        <img src="img/calculator2.jpg" class="responsive-img" alt="Title popup" />
                     </header>
                     <div class="popup__content">
                         <div class="popup__description lrmw_layer" data-show-delay="200" data-hide-delay="600" data-time="500" data-show-effect="fadeInLeft" data-hide-effect="fadeOutLeft">
                             <br>
                             <br>
-                            <p> Basic CSS, HTML, Bootstrap, and Javascript.</p>
+                            <p>CSS, HTML, Bootstrap, RegEx, and Javascript.</p>
                         </div>
                         <div class="popup__sidebar lrmw_layer" data-show-delay="400" data-hide-delay="600" data-time="500" data-show-effect="fadeInRight" data-hide-effect="fadeOutRight">
                             <div class="popup__demo-box">
                                 <h4 class="title title_small">Demo:</h4>
-                                <a href="Projects/survey/index.html" target="_blank" class="popup__show-more">Take Survey</a>
+                                <a href="Projects/calculator/index.html" target="_blank" class="popup__show-more">Calculator</a>
                             </div>
                         </div>
                     </div>
