made some changes to experience

--- a/index.html
+++ b/index.html
@@ -258,12 +258,13 @@
                         <span class="timeline__place-work">Codify Academy</span>
                     </div>
                     <article class="timeline__inner timeline__content layer" data-show-effect="fadeInRight" data-show-delay="100">
-                        <h3 class="title title_small timeline__title">Student Mentor</h3>
+                        <h3 class="title title_small timeline__title">Student Mentor | Front-End Developer</h3>
                         <div class="timeline__description">
                             <p>-I help mentor new students on the curriculum Codify offers in Front-End Development.
                                 <br> -Course covers languages and frameworks such as, HTML5, CSS3, JavaScript, jQuery, Bootstrap, API's, JSON, AJAX, &nbsp;&nbsp;and AngularJS.
                                 <br> -Help students with critical thinking and intense problem solving
                                 <br> -I specialize in 1 on 1 mentoring, helping students keep on track with the course. 
+                                <br> -I organize small team projects.
                                 <br>
                             </p>
                         </div>
@@ -272,16 +273,16 @@
                 <div class="timeline__layout">
                     <div class="timeline__dotted layer" data-show-effect="zoomIn" data-show-delay="90" data-time="300"></div>
                     <div class="timeline__inner timeline__time  layer" data-show-effect="fadeIn" data-show-delay="130">
-                        <span class="timeline__date">Nov 2016 - present</span>
-                        <span class="timeline__place-work">devbybill</span>
+                        <span class="timeline__date">Jan 2015 - present</span>
+                        <span class="timeline__place-work">Freelance</span>
                     </div>
                     <article class="timeline__inner timeline__content layer" data-show-effect="fadeInRight" data-show-delay="120">
-                        <h3 class="title title_small timeline__title">Web Developer</h3>
+                        <h3 class="title title_small timeline__title"> Freelance Web Developer</h3>
                         <div class="timeline__description">
-                            <p>-Build and maintain website using resposive designs
+                            <p>-I started building website from guides I found on the internet
                                 <br> -CSS to add next level designs to websites and applications
                                 <br> -Javascript to make parts of the site function
-                                <br> -jQuery to make applications, converting raw Javascript to jQuery vice versa
+                                <br> -Used frameworks and libraries like Bootstrap, Angular, jQuery, etc
                                 <br> 
                             </p>
                         </div>
