changes the format of somerthings

--- a/index.html
+++ b/index.html
@@ -123,7 +123,9 @@
                                 <img class="avatar__img responsive-img" src="img/billhoang.jpg" alt="side view of bill" />
                             </div>
                             <div class="about-me__content">
-                                <p class='aboutC'>I love to code and play video games, you will always find me doing one or the other. Taking on new challenges is one of the best ways to grow and expand my knowledge and skills. I love to draw so the artist in me loves CSS. Always wondered how websites function and why they worked, so Javascript is my language of choice, along with HTML. I have a nack for problem solving so debugging code and seeing it function brings me joy. </p>
+                                <p class='aboutC'>
+	                                I love to code and play video games, you will always find me doing one or the other. Taking on new challenges is one of the best ways to grow and expand my knowledge and skills. I love to draw so the artist in me loves CSS. Always wondered how websites function and why they worked, so Javascript is my language of choice, along with HTML. I have a nack for problem solving so debugging code and seeing it function brings me joy. 
+	                            </p>
                             </div>
                             <section class="about-me__sidebar layer" data-show-effect="fadeInLeft" data-show-delay="100">
                                 <h3 class="title title_middle about-me__title">PERSONAL <span class="about-me__title-label">INFO</span></h3>
@@ -218,7 +220,7 @@
                     <div class="skills-bar__item">
                         <div class="skill-bar layer skill-bar_js" data-show-effect="fadeInLeft" data-show-delay="300" data-skill-bar-width="">
                             <div class="skill layer" data-show-effect="fadeIn" data-show-delay="300">
-                                <span class="skill__name">NODE</span>
+                                <span class="skill__name">NodeJS</span>
                                 <span class="skill__value skill__value_js"></span>
                             </div>
                         </div>
@@ -234,7 +236,7 @@
                     <div class="skills-bar__item">
                         <div class="skill-bar layer skill-bar_js" data-show-effect="fadeInLeft" data-show-delay="350" data-skill-bar-width="">
                             <div class="skill layer" data-show-effect="fadeIn" data-show-delay="350">
-                                <span class="skill__name">Express</span>
+                                <span class="skill__name">ExpressJS</span>
                                 <span class="skill__value skill__value_js"></span>
                             </div>
                         </div>
